Right navigation fixes (#42)
* Right-side navigation should show when in largest media query width

* Right-side navigation should only show if there are > 1 items

* Style fixes to make floating nav look better

* Remove indent from selected item, and add it to low-level items

* Remove spacing between subheaders

* Ellipsize text if too long

* Line height adjustments to prevent text from being cut vertically

* Fix on hover state for floating nav

* Fix on scroll bar showing up when hovering a TOC item

* Fix on indentation for multiple heading levels

* Hide the first H1 on the TOC

* Parse and add all heading hierarchies to the TOC, not just the first three

* Add title to TOC

* Dark mode adjustments for TOC

* Fix on missing curly bracket

* Fix on hiding the the title now that we have contents at the beginning

* Remove right navigation on advanced features page

* Make right navigation scrollable when it's too tall

* Added gradient to right navigation bar

* Remove left border from right navigation

* Fix on gradient for dark theme

--- a/styles/global/dark.scss
+++ b/styles/global/dark.scss
@@ -275,48 +275,14 @@ body[data-theme="dark-mode"] {
         }
     }
     .toc {
-        ol li.active {
-            &.tutorials {
-                background: $violet-90;
-                svg {
-                    path {
-                        fill: $white;
-                    }
-                }
-            }   
-            
-            &.topic-guides {
-                background: $l-blue-90;
-                svg {
-                    path {
-                        fill: $white;
-                    }
-                }
-            }   
+        .top-gradient {
+            background: linear-gradient(to bottom, $gray-100 0%, $gray-100 75%, rgba(255, 255, 255, 0) 100%);
+        }
 
-            &.reference-guides {
-                background: $orange-90;
-                svg {
-                    path {
-                        fill: $white;
-                    }
-                }
-            }    
-
-            &.support {
-                background: $red-90;
-                svg {
-                    path {
-                        fill: $white;
-                    }
-                }
-            }             
-            &.updates,&.changelog {
-                background: $green-90;
-                svg {
-                    path {
-                        fill: $white;
-                    }
+        ol li {
+            &.active {
+                a {
+                    color: $white;
                 }
             }
         }
